--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <span class="text-primary">Lanzeray</span>
           </h1>
           <div class="subheading mb-5">97320 St Laurent du Maroni ·
-            <a href="mailto:name@email.com">nathanlanzeray@gmail.com</a>
+            <a href="mailto:nathanlanzeray@gmail.com">nathanlanzeray@gmail.com</a>
           </div>
           <p class="lead mb-5">j'étudie au lycée Bertene Juminer</p>
           <div class="social-icons">
